--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -9,12 +9,12 @@
 Hello World..</h1>
 <form action='MyServ' method='GET'>
 Submit To get the Movies Details Details...
-<input type='checkbox' name='insert'/>
-<input type='text' name='name'/>
-<input type='text' name='actor'/>
-<input type='text' name='actress'/>
-<input type='text' name='director'/>
-<input type='text' name='year_or_release'/>
+Insert?: <input type='checkbox' name='insert'/><br/>
+Name: <input type='text' name='name'/><br/>
+Actor: <input type='text' name='actor'/><br/>
+Actress: <input type='text' name='actress'/><br/>
+Actress: <input type='text' name='director'/><br/>
+Year: <input type='text' name='year_or_release'/><br/>
 <input type='submit'>
 </form>
 </body>
